- Add RestoreWindowPositionLogical function to restore window position with DPI conversion
- Add EnsureWindowOnScreen function to validate and adjust window position for current monitor
- Integrate window position save in WM_DESTROY handler of main window
- Integrate window position restore in WM_INITDIALOG handler of main window
- Window position stored in registry at Software\YouTubeCacher\WindowPos\MainWindow
- Position saved in logical coordinates (96 DPI) for DPI-independent persistence
- Position restored with conversion to current DPI for proper scaling
- Screen bounds checking ensures window remains visible after DPI or monitor changes
- Implement AddIconToManager to register icons with IconManager
- Implement GetIconSizeForDPI to calculate appropriate icon size for DPI
- Implement LoadIconForDPI to load icon at appropriate size with fallback logic
- Implement SetControlIcon to apply icons to controls via STM_SETICON message
- Implement ReloadIconsForDPI to update all icons in window on DPI change
- Implement SetControlIconWithTracking to store resource ID for DPI change tracking
- Implement InitializeIconControl helper for dialog icon initialization
- Add icon resource documentation to YouTubeCacher.rc for future custom icons
- Icon scaling infrastructure ready for custom icons at 16x16, 20x20, 24x24, 32x32, 48x48, 64x64 sizes
- System icons (IDI_QUESTION) remain DPI-aware by default via Windows

User Interface:
- Add accessibility support with screen reader integration
- Implement `SetControlAccessibility` function for accessible names and descriptions
- Implement `NotifyAccessibilityStateChange` function for screen reader notifications
- Implement `IsScreenReaderActive` function to detect active screen readers (NVDA, Narrator, JAWS, etc.)
- Implement high contrast mode support with `IsHighContrastMode` function
- Implement `GetHighContrastColor` function to retrieve system colors for high contrast